--- a/main.css
+++ b/main.css
@@ -50,9 +50,9 @@ body {
 }
 
 .container img {
-  width: 30%;
+  width: 40%;
   border-radius: 4px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .details {
@@ -69,12 +69,17 @@ body {
   border-radius: 4px;
 }
 
+p {
+  line-height: 25px;
+}
+
 @media only screen and (max-width: 600px) {
   .container {
     width: 95%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
   }
 
   .title {
@@ -92,5 +97,6 @@ body {
   .container img {
     width: 100%;
     height: 200px;
+    object-fit: cover;
   }
 }
